--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 /* Estilo para background de formulario */
 body {
-    background-color: rgb(205, 247, 193);
+    background-color: rgba(28, 91, 207, 0.322);
 }
 
 
