--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,3 +9,47 @@ body {
     margin: 20px;
     border-radius: 10px; /* Bordes redondeados */
 }
+
+
+/* nac del formulario*/
+
+header {
+    background-color:#12203E
+    }
+    .contenedor .header {
+        display:flex ; 
+        justify-content: center;
+        align-items: center ;
+        height: 85px ;
+        padding: 5px 10px ;
+        width: 100% ;
+        margin: 0% ;
+        padding: 0;
+    }
+    .contenedor .header .nav-links li {
+        display: inline-block;
+        padding: 5px 15px ;
+        background-color:#12203E;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        transition: all 0.3s ease 0s;
+    }
+    
+    .contenedor .header .nav-links li:hover {
+        transform: scale(1.1);
+    }
+    
+    .contenedor .header .nav-links a {
+        font-size: 700;
+        color:white;
+        text-decoration: none;
+        
+    }
+    
+    .contenedor .header  .nav-links li:hover{
+        background-color: white;
+    }
+    .contenedor .header  .nav-links li a:hover{
+    color:#1F4172;
+    }
